--- a/foundry.toml
+++ b/foundry.toml
@@ -5,7 +5,9 @@ libs = ['lib']
 gas_reports = ["*"]
 optimizer = true
 optimizer_runs = 20000
+solc_version = "0.8.17"
 
 # Remappings in remappings.txt
+remappings = ["ds-test/=lib/forge-std/lib/ds-test/src", "@openzeppelin/=lib/openzeppelin-contracts", "@solmate/=lib/solmate/src"]
 
 # See more config options https://github.com/gakonst/foundry/tree/master/config
