--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 GOERLI_RPC_URL=asdfasdf 
-PRIVATE_KEY=asdfasdf 
+METAMASK_PRIVATE_KEY=asdfasdf 
 ETHERSCAN_API_KEY=asdfasfs
+POLYGON_ALCHEMY_API_URL = asdfasfs
