--- a/foundry.toml
+++ b/foundry.toml
@@ -3,6 +3,7 @@ src = 'src'
 out = 'out'
 libs = ['lib']
 gas_reports = ["*"]
+gas_limit = 9223372036854775807
 optimizer = true
 optimizer_runs = 20000
 solc_version = "0.8.17"
